Support localized month names in the KDateEdit properly

BUG: 140030

svn path=/trunk/extragear/graphics/kphotoalbum/; revision=790178